--- a/app/src/main/res/layout/content_search_tiket.xml
+++ b/app/src/main/res/layout/content_search_tiket.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:app="http://schemas.android.com/apk/res/android"
-    xmlns:app2="http://schemas.android.com/apk/res-auto"
-    app2:layout_behavior="@string/appbar_scrolling_view_behavior"
-    app:layout_height="fill_parent"
-    app:layout_width="fill_parent"
-    app:paddingBottom="@dimen/activity_vertical_margin"
-    app:paddingLeft="@dimen/activity_horizontal_margin"
-    app:paddingRight="@dimen/activity_horizontal_margin"
-    app:paddingTop="@dimen/activity_vertical_margin">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <WebView
-        app:id="@+id/webView"
-        app:layout_height="fill_parent"
-        app:layout_width="fill_parent" />
+        android:id="@+id/webView"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent" />
 </RelativeLayout>
 
