--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,151 +10,211 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
+    <LinearLayout
+        android:id="@+id/stasiun_asal_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <TextView
         android:id="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
+        android:layout_gravity="center_vertical"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="110dp"
         android:text="Stasiun Asal" />
 
     <Spinner
         android:dropDownSelector="#e4eafc"
         android:id="@+id/originSpinner"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
+        android:layout_gravity="center_vertical"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/textView"
         android:layout_width="fill_parent"
         android:spinnerMode="dropdown" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/stasiun_tujuan_layout"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/stasiun_asal_layout"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
     <TextView
         android:id="@+id/textView2"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@id/originSpinner"
+        android:layout_gravity="center_vertical"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="110dp"
         android:text="Stasiun Tujuan" />
 
     <Spinner
         android:id="@+id/destinSpinner"
-        android:layout_alignTop="@id/textView2"
+        android:layout_gravity="center_vertical"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/textView2"
         android:layout_width="fill_parent" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/tgl_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/stasiun_tujuan_layout"
+        android:orientation="horizontal">
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@id/destinSpinner"
+        android:layout_gravity="center_vertical"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="110dp"
         android:text="Tgl.Berangkat" />
 
     <Spinner
         android:id="@+id/tglSpinner"
-        android:layout_alignLeft="@id/destinSpinner"
-        android:layout_alignTop="@id/textView3"
+        android:layout_gravity="center_vertical"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/kereta_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tgl_layout"
+        android:orientation="horizontal">
+
     <TextView
         android:id="@+id/textView4"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@id/tglSpinner"
+        android:layout_gravity="center_vertical"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="110dp"
         android:text="Kereta" />
 
     <Spinner
         android:id="@+id/keretaSpinner"
-        android:layout_alignLeft="@id/tglSpinner"
-        android:layout_below="@id/tglSpinner"
+        android:layout_gravity="center_vertical"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/nama_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/kereta_layout">
+
     <TextView
         android:id="@+id/textView5"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@id/keretaSpinner"
+        android:layout_gravity="center_vertical"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:text="Nama" />
 
     <EditText
         android:ems="10"
         android:id="@+id/txtNama"
+        android:layout_gravity="center_vertical"
         android:inputType="textPersonName"
-        android:layout_alignLeft="@id/keretaSpinner"
-        android:layout_below="@id/keretaSpinner"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ktp_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/nama_layout">
+
     <TextView
         android:id="@+id/textView6"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@id/txtNama"
+        android:layout_gravity="center_vertical"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:text="No.KTP" />
 
     <EditText
         android:id="@+id/txtNoKTP"
-        android:layout_alignLeft="@id/txtNama"
-        android:layout_below="@id/txtNama"
+        android:layout_gravity="center_vertical"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/telpn_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@id/ktp_layout">
+
     <TextView
         android:id="@+id/textView7"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@id/txtNoKTP"
+        android:layout_gravity="center_vertical"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:text="No Telp" />
 
     <EditText
         android:id="@+id/txtNoTelp"
-        android:layout_alignLeft="@id/txtNoKTP"
-        android:layout_below="@id/txtNoKTP"
+        android:layout_gravity="center_vertical"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:inputType="phone"/>
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/email_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/telpn_layout">
+
     <TextView
         android:id="@+id/textView8"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@id/txtNoTelp"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
+        android:layout_gravity="center_vertical"
         android:text="Email" />
 
     <EditText
         android:id="@+id/txtEmail"
-        android:layout_alignLeft="@id/txtNoTelp"
-        android:layout_below="@id/txtNoTelp"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
+        android:layout_gravity="center_vertical"
         android:inputType="textEmailAddress"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/alamat_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@id/email_layout">
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@id/txtEmail"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
+        android:layout_gravity="center_vertical"
         android:text="Alamat" />
 
     <EditText
         android:id="@+id/txtAlamat"
-        android:layout_alignLeft="@id/txtEmail"
-        android:layout_alignTop="@id/textView9"
+        android:layout_gravity="center_vertical"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent" />
 
+    </LinearLayout>
+
     <RadioGroup
-        android:layout_alignRight="@id/txtAlamat"
-        android:layout_below="@id/txtAlamat"
+        android:layout_below="@id/alamat_layout"
+        android:layout_marginTop="15dp"
         android:id="@+id/RGServer"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -177,7 +237,7 @@
 
     <Button
         android:id="@+id/btnSearch"
-        android:layout_alignRight="@id/txtAlamat"
+        android:layout_alignRight="@id/alamat_layout"
         android:layout_below="@id/RGServer"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
