--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:id="@+id/stasiun_asal_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:orientation="horizontal">
     <TextView
         android:id="@+id/textView"
@@ -36,7 +36,7 @@
         android:id="@+id/stasiun_tujuan_layout"
         android:layout_width="match_parent"
         android:layout_below="@+id/stasiun_asal_layout"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:orientation="horizontal">
 
     <TextView
@@ -57,7 +57,7 @@
     <LinearLayout
         android:id="@+id/tgl_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:layout_below="@+id/stasiun_tujuan_layout"
         android:orientation="horizontal">
 
@@ -79,7 +79,7 @@
     <LinearLayout
         android:id="@+id/kereta_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:layout_below="@+id/tgl_layout"
         android:orientation="horizontal">
 
