--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,247 +1,252 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    android:layout_height="fill_parent"
     android:layout_width="fill_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:layout_height="fill_parent">
 
-    <LinearLayout
-        android:id="@+id/stasiun_asal_layout"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:orientation="horizontal">
-    <TextView
-        android:id="@+id/textView"
-        android:layout_gravity="center_vertical"
-        android:layout_height="wrap_content"
-        android:layout_width="110dp"
-        android:text="Stasiun Asal" />
-
-    <Spinner
-        android:dropDownSelector="#e4eafc"
-        android:id="@+id/originSpinner"
-        android:layout_gravity="center_vertical"
-        android:layout_height="wrap_content"
+    <RelativeLayout
         android:layout_width="fill_parent"
-        android:spinnerMode="dropdown" />
+        android:layout_height="fill_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/stasiun_asal_layout"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:orientation="horizontal">
 
-    <LinearLayout
-        android:id="@+id/stasiun_tujuan_layout"
-        android:layout_width="match_parent"
-        android:layout_below="@+id/stasiun_asal_layout"
-        android:layout_height="35dp"
-        android:orientation="horizontal">
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="110dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="Stasiun Asal" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_gravity="center_vertical"
-        android:layout_height="wrap_content"
-        android:layout_width="110dp"
-        android:text="Stasiun Tujuan" />
+            <Spinner
+                android:id="@+id/originSpinner"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:dropDownSelector="#e4eafc"
+                android:spinnerMode="dropdown" />
 
-    <Spinner
-        android:id="@+id/destinSpinner"
-        android:layout_gravity="center_vertical"
-        android:layout_height="wrap_content"
-        android:layout_width="fill_parent" />
+        </LinearLayout>
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/stasiun_tujuan_layout"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_below="@+id/stasiun_asal_layout"
+            android:orientation="horizontal">
 
-    <LinearLayout
-        android:id="@+id/tgl_layout"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_below="@+id/stasiun_tujuan_layout"
-        android:orientation="horizontal">
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="110dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="Stasiun Tujuan" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_gravity="center_vertical"
-        android:layout_height="wrap_content"
-        android:layout_width="110dp"
-        android:text="Tgl.Berangkat" />
+            <Spinner
+                android:id="@+id/destinSpinner"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical" />
 
-    <Spinner
-        android:id="@+id/tglSpinner"
-        android:layout_gravity="center_vertical"
-        android:layout_height="wrap_content"
-        android:layout_width="fill_parent" />
+        </LinearLayout>
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/tgl_layout"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_below="@+id/stasiun_tujuan_layout"
+            android:orientation="horizontal">
 
-    <LinearLayout
-        android:id="@+id/kereta_layout"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_below="@+id/tgl_layout"
-        android:orientation="horizontal">
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="110dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="Tgl.Berangkat" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_gravity="center_vertical"
-        android:layout_height="wrap_content"
-        android:layout_width="110dp"
-        android:text="Kereta" />
+            <Spinner
+                android:id="@+id/tglSpinner"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical" />
 
-    <Spinner
-        android:id="@+id/keretaSpinner"
-        android:layout_gravity="center_vertical"
-        android:layout_height="wrap_content"
-        android:layout_width="fill_parent" />
+        </LinearLayout>
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/kereta_layout"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_below="@+id/tgl_layout"
+            android:orientation="horizontal">
 
-    <LinearLayout
-        android:id="@+id/nama_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@+id/kereta_layout">
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="110dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="Kereta" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_gravity="center_vertical"
-        android:layout_height="wrap_content"
-        android:layout_width="80dp"
-        android:text="Nama" />
+            <Spinner
+                android:id="@+id/keretaSpinner"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical" />
 
-    <EditText
-        android:ems="10"
-        android:id="@+id/txtNama"
-        android:layout_gravity="center_vertical"
-        android:inputType="textPersonName"
-        android:layout_height="wrap_content"
-        android:layout_width="fill_parent" />
+        </LinearLayout>
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/nama_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/kereta_layout"
+            android:orientation="horizontal">
 
-    <LinearLayout
-        android:id="@+id/ktp_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@+id/nama_layout">
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="Nama" />
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_gravity="center_vertical"
-        android:layout_height="wrap_content"
-        android:layout_width="80dp"
-        android:text="No.KTP" />
+            <EditText
+                android:id="@+id/txtNama"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:ems="10"
+                android:inputType="textPersonName" />
 
-    <EditText
-        android:id="@+id/txtNoKTP"
-        android:layout_gravity="center_vertical"
-        android:layout_height="wrap_content"
-        android:layout_width="fill_parent" />
+        </LinearLayout>
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/ktp_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/nama_layout"
+            android:orientation="horizontal">
 
-    <LinearLayout
-        android:id="@+id/telpn_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@id/ktp_layout">
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="No.KTP" />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_gravity="center_vertical"
-        android:layout_height="wrap_content"
-        android:layout_width="80dp"
-        android:text="No Telp" />
+            <EditText
+                android:id="@+id/txtNoKTP"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical" />
 
-    <EditText
-        android:id="@+id/txtNoTelp"
-        android:layout_gravity="center_vertical"
-        android:layout_height="wrap_content"
-        android:layout_width="fill_parent"
-        android:inputType="phone"/>
+        </LinearLayout>
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/telpn_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/ktp_layout"
+            android:orientation="horizontal">
 
-    <LinearLayout
-        android:id="@+id/email_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@+id/telpn_layout">
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="No Telp" />
 
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_height="wrap_content"
-        android:layout_width="80dp"
-        android:layout_gravity="center_vertical"
-        android:text="Email" />
+            <EditText
+                android:id="@+id/txtNoTelp"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:inputType="phone" />
 
-    <EditText
-        android:id="@+id/txtEmail"
-        android:layout_height="wrap_content"
-        android:layout_width="fill_parent"
-        android:layout_gravity="center_vertical"
-        android:inputType="textEmailAddress"/>
+        </LinearLayout>
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/email_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/telpn_layout"
+            android:orientation="horizontal">
 
-    <LinearLayout
-        android:id="@+id/alamat_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@id/email_layout">
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="Email" />
 
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_height="wrap_content"
-        android:layout_width="80dp"
-        android:layout_gravity="center_vertical"
-        android:text="Alamat" />
+            <EditText
+                android:id="@+id/txtEmail"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:inputType="textEmailAddress" />
 
-    <EditText
-        android:id="@+id/txtAlamat"
-        android:layout_gravity="center_vertical"
-        android:layout_height="wrap_content"
-        android:layout_width="fill_parent" />
+        </LinearLayout>
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/alamat_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/email_layout"
+            android:orientation="horizontal">
 
-    <RadioGroup
-        android:layout_below="@id/alamat_layout"
-        android:layout_marginTop="15dp"
-        android:id="@+id/RGServer"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="Alamat" />
 
-        <RadioButton
-            android:id="@+id/RBServer1"
+            <EditText
+                android:id="@+id/txtAlamat"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical" />
+
+        </LinearLayout>
+
+        <RadioGroup
+            android:id="@+id/RGServer"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/alamat_layout"
+            android:layout_marginTop="15dp"
+            android:orientation="vertical">
+
+            <RadioButton
+                android:id="@+id/RBServer1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="https://tiket.kereta-api.co.id/" />
+
+            <RadioButton
+                android:id="@+id/RBServer2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="https://tiket2.kereta-api.co.id/" />
+
+        </RadioGroup>
+
+        <Button
+            android:id="@+id/btnSearch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="https://tiket.kereta-api.co.id/"/>
+            android:layout_alignRight="@id/alamat_layout"
+            android:layout_below="@id/RGServer"
+            android:onClick="searchClick"
+            android:text="Search" />
 
-        <RadioButton
-            android:id="@+id/RBServer2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="https://tiket2.kereta-api.co.id/"/>
-
-    </RadioGroup>
-
-    <Button
-        android:id="@+id/btnSearch"
-        android:layout_alignRight="@id/alamat_layout"
-        android:layout_below="@id/RGServer"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:onClick="searchClick"
-        android:text="Search" />
-
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
